--- a/TRABALHO_1_ROBO_ASPIRADOR.ipynb
+++ b/TRABALHO_1_ROBO_ASPIRADOR.ipynb
@@ -459,7 +459,7 @@
       "metadata": {
         "id": "6e_jqMbAuuVO"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -472,34 +472,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1GTKD6Rvu2s3",
-        "outputId": "d35aed04-c443-4429-92ba-462344d28cc0"
+        "outputId": "95824bba-3752-4cc2-b807-564b0104ff50"
       },
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "step 0 - action east - position [2 2] - dirty False\n",
-            "step 1 - action north - position [2 3] - dirty True\n",
-            "step 2 - action west - position [2 2] - dirty False\n",
-            "step 3 - action north - position [2 1] - dirty False\n",
-            "step 4 - action north - position [2 0] - dirty False\n",
-            "step 5 - action east - position [2 0] - dirty False\n",
-            "step 6 - action suck - position [2 1] - dirty False\n",
-            "step 7 - action north - position [2 1] - dirty False\n",
-            "step 8 - action suck - position [2 0] - dirty False\n",
-            "step 9 - action west - position [2 0] - dirty False\n",
-            "step 10 - action east - position [ 2 -1] - dirty False\n",
-            "step 11 - action west - position [2 0] - dirty False\n",
-            "step 12 - action suck - position [ 2 -1] - dirty False\n",
-            "step 13 - action north - position [ 2 -1] - dirty False\n",
-            "step 14 - action north - position [ 2 -2] - dirty True\n",
-            "step 15 - action south - position [ 2 -3] - dirty False\n",
-            "step 16 - action west - position [ 2 -2] - dirty True\n",
-            "step 17 - action east - position [ 2 -3] - dirty False\n",
-            "step 18 - action north - position [ 2 -2] - dirty True\n",
-            "step 19 - action east - position [ 2 -3] - dirty False\n"
+            "step 0 - action suck - position [1 0] - dirty False\n",
+            "step 1 - action east - position [1 0] - dirty False\n",
+            "step 2 - action north - position [1 1] - dirty False\n",
+            "step 3 - action suck - position [1 0] - dirty False\n",
+            "step 4 - action west - position [1 0] - dirty False\n",
+            "step 5 - action west - position [ 1 -1] - dirty True\n",
+            "step 6 - action south - position [ 1 -2] - dirty False\n",
+            "step 7 - action south - position [ 1 -1] - dirty True\n",
+            "step 8 - action east - position [1 0] - dirty False\n",
+            "step 9 - action suck - position [1 1] - dirty False\n",
+            "step 10 - action suck - position [1 1] - dirty False\n",
+            "step 11 - action suck - position [1 1] - dirty False\n",
+            "step 12 - action south - position [1 1] - dirty False\n",
+            "step 13 - action east - position [1 2] - dirty True\n",
+            "step 14 - action north - position [1 3] - dirty False\n",
+            "step 15 - action south - position [1 2] - dirty True\n",
+            "step 16 - action north - position [1 3] - dirty False\n",
+            "step 17 - action north - position [1 2] - dirty True\n",
+            "step 18 - action west - position [1 1] - dirty False\n",
+            "step 19 - action west - position [1 0] - dirty False\n"
           ]
         },
         {
@@ -510,7 +510,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 27
         }
       ]
     },
@@ -530,7 +530,7 @@
       "metadata": {
         "id": "5BBiFsSru5aQ"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -540,38 +540,48 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 416
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wAe4QgL8_tSk",
-        "outputId": "daed1c7f-d8ae-4f9f-84cb-f9db5e74369b"
+        "outputId": "9bdd8743-c649-4965-e6df-a2cc9c5b93e5"
       },
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "step 0 - action east - position [0 1] - dirty False\n",
-            "step 1 - action east - position [0 2] - dirty False\n",
-            "step 2 - action west - position [0 3] - dirty True\n",
-            "step 3 - action south - position [0 3] - dirty True\n",
-            "step 4 - action suck - position [0 4] - dirty False\n",
-            "step 5 - action east - position [0 4] - dirty False\n"
+            "step 0 - action suck - position [4 0] - dirty False\n",
+            "step 1 - action north - position [4 0] - dirty False\n",
+            "step 2 - action suck - position [4 0] - dirty False\n",
+            "step 3 - action east - position [4 0] - dirty False\n",
+            "step 4 - action suck - position [4 0] - dirty False\n",
+            "step 5 - action suck - position [4 0] - dirty False\n",
+            "step 6 - action suck - position [4 0] - dirty False\n",
+            "step 7 - action north - position [4 0] - dirty False\n",
+            "step 8 - action west - position [4 0] - dirty False\n",
+            "step 9 - action east - position [ 4 -1] - dirty False\n",
+            "step 10 - action west - position [ 4 -1] - dirty False\n",
+            "step 11 - action north - position [ 4 -2] - dirty False\n",
+            "step 12 - action south - position [ 4 -3] - dirty False\n",
+            "step 13 - action west - position [ 4 -2] - dirty False\n",
+            "step 14 - action north - position [ 4 -3] - dirty False\n",
+            "step 15 - action east - position [ 4 -4] - dirty False\n",
+            "step 16 - action south - position [ 4 -4] - dirty False\n",
+            "step 17 - action south - position [ 4 -3] - dirty False\n",
+            "step 18 - action west - position [ 4 -2] - dirty False\n",
+            "step 19 - action suck - position [ 4 -3] - dirty False\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-3aef4a736ec1>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbasic_environment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msimple_randomized_agent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-18-757785ef2fd1>\u001b[0m in \u001b[0;36mbasic_environment\u001b[0;34m(agent, max_steps, verbose)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mperceptions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdirty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent_perception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menvironment\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperceptions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdirty\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-13-72fb5e53de2e>\u001b[0m in \u001b[0;36magent_perception\u001b[0;34m(environment, position)\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mposition\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#posição do vet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0menvironment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#dimensao da mat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0mdirty\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menvironment\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#indicar se ta sujo ou n\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m#com base onde ele esta vai indicar onde ele pode se movimentar ou nao\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mwest\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: index 5 is out of bounds for axis 0 with size 5"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     },
